--- a/404.html
+++ b/404.html
@@ -9,13 +9,13 @@
     <link rel="preload stylesheet" href="/1224045520/assets/style.Ds010Bu5.css" as="style">
     <link rel="preload stylesheet" href="/1224045520/vp-icons.css" as="style">
     
-    <script type="module" src="/1224045520/assets/app.D8NuRYyT.js"></script>
+    <script type="module" src="/1224045520/assets/app.DyUlWrd9.js"></script>
     <script id="check-dark-mode">(()=>{const e=localStorage.getItem("vitepress-theme-appearance")||"auto",a=window.matchMedia("(prefers-color-scheme: dark)").matches;(!e||e==="auto"?a:e==="dark")&&document.documentElement.classList.add("dark")})();</script>
     <script id="check-mac-os">document.documentElement.classList.toggle("mac",/Mac|iPhone|iPod|iPad/i.test(navigator.platform));</script>
   </head>
   <body>
     <div id="app"></div>
-    <script>window.__VP_HASH_MAP__=JSON.parse("{\"2025.md\":\"D6LtcZ_G\",\"2026.md\":\"ryS-r5Ku\",\"2supervisor.md\":\"BieHNZG-\",\"index.md\":\"CuXB_65i\"}");window.__VP_SITE_DATA__=JSON.parse("{\"lang\":\"en-US\",\"dir\":\"ltr\",\"title\":\"2supervisor\",\"titleTemplate\":\"Tiancheng\",\"description\":\"To my supervisor\",\"base\":\"/1224045520/\",\"head\":[],\"router\":{\"prefetchLinks\":true},\"appearance\":true,\"themeConfig\":{\"nav\":[{\"text\":\"致导师\",\"link\":\"/2supervisor\"},{\"text\":\"2025 记录\",\"link\":\"/2025\"},{\"text\":\"2026 记录\",\"link\":\"/2026\"}],\"sidebar\":[{\"text\":\"阅读\",\"items\":[{\"text\":\"致导师\",\"link\":\"/2supervisor\"},{\"text\":\"2025 记录\",\"link\":\"/2025\"},{\"text\":\"2026 记录\",\"link\":\"/2026\"}]}],\"socialLinks\":[{\"icon\":\"github\",\"link\":\"https://github.com/161043261\"},{\"icon\":\"qq\",\"link\":\"https://qm.qq.com/q/YDORema7As\"}]},\"locales\":{},\"scrollOffset\":134,\"cleanUrls\":false}");</script>
+    <script>window.__VP_HASH_MAP__=JSON.parse("{\"2025.md\":\"CIBQDnVY\",\"2supervisor.md\":\"Z8ZaNPzL\",\"index.md\":\"C8DQ9UXx\",\"权利要求书.md\":\"DFEtEzkk\",\"说明书_具体实施方式.md\":\"cVZXaX0o\",\"说明书_发明内容.md\":\"EJPFxazG\",\"说明书_技术领域.md\":\"C5NpAGCE\",\"说明书_背景技术.md\":\"Ba0h0hJT\",\"说明书摘要.md\":\"CI7F5XAz\"}");window.__VP_SITE_DATA__=JSON.parse("{\"lang\":\"en-US\",\"dir\":\"ltr\",\"title\":\"2supervisor\",\"titleTemplate\":\"Tiancheng\",\"description\":\"To my supervisor\",\"base\":\"/1224045520/\",\"head\":[],\"router\":{\"prefetchLinks\":true},\"appearance\":true,\"themeConfig\":{\"nav\":[{\"text\":\"致导师\",\"link\":\"/2supervisor\"},{\"text\":\"2025 记录\",\"link\":\"/2025\"},{\"text\":\"2026 记录\",\"link\":\"/2026\"}],\"sidebar\":[{\"text\":\"阅读\",\"items\":[{\"text\":\"致导师\",\"link\":\"/2supervisor\"},{\"text\":\"2025 记录\",\"link\":\"/2025\"},{\"text\":\"2026 记录\",\"link\":\"/2026\"}]}],\"socialLinks\":[{\"icon\":\"github\",\"link\":\"https://github.com/161043261\"},{\"icon\":\"qq\",\"link\":\"https://qm.qq.com/q/YDORema7As\"}]},\"locales\":{},\"scrollOffset\":134,\"cleanUrls\":false}");</script>
     
   </body>
 </html>
